--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Car Race Game</title>
 
+    <link type="image/png" sizes="96x96" rel="icon" href="/images/icons8-video-game-96.png">
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="carGame">
+        <div class="score"> </div>
+        <div class="startScreen">
+            <p> Press here to start <br>
+                Arrow keys to move <br>
+                If you hit another car you will lose!
+            </p>
+        </div>
+        <div class="gameArea">  </div>
+    </div>
+    <audio id="jumpsound" src="jumpsound.mp3"></audio>
+
+    <script src="script.js"></script>
+</body>
+</html>
